# lilacphilly-org

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  circle.yml  gunicorn.sh  npm-shrinkwrap.json  package.json  pyproject.toml  uncss.js
ansible/group_vars/: all
blog/: apps.py  models.py  tests.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: _pagination.html  blog_entries_by_page.html  blog_entry.html
bulletins/: apps.py  models.py  tests.py
bulletins/migrations/: 0001_initial.py
common/: apps.py  blocks.py  context_processors.py  middleware.py  models.py  open_graph.py  site_settings.py  snippets.py  tests.py
common/migrations/: 0001_initial.py
common/templates/: 404.html  base.html  email_base.html
common/templates/common/: _captioned_image_block.html  _cta.html  css.html  menu.html  top_level_page.html
common/templatetags/: common_tags.py
config/: __init__.py  urls.py
config/settings/: base.py  dev.py  production.py
home/: models.py
home/migrations/: 0001_initial.py
member_calendar/: apps.py  models.py  tests.py  utils.py  wagtail_hooks.py
member_calendar/migrations/: 0001_initial.py  0002_membercalendarevent_no_physical_location.py  0003_calendareventtag.py  0004_membercalendarevent_event_tags.py
member_calendar/templates/member_calendar/: _event.html  events_by_month.html  member_calendar_event.html
search/: views.py
