[tool.poetry]
name = "lilacphilly-org"
version = "0.1.0"
description = ""
authors = ["Jeremy Low <jeremy@iseverythingstilltheworst.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
wagtail = "^2.9"
wagtailmenus = "^3.0"
django-localflavor = "^2.2"
python-dateutil = "^2.8.1"
icalendar = "^4.0.4"
gunicorn = "^20.0.4"
premailer = "^3.6.1"
django-anymail = "^7.0.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.3"
pytest-django = "^3.7.0"
pytest-cov = "^2.8.1"
coverage = "^4.5.4"
pre-commit = "^1.20.0"
pytest = "^5.3.1"
black = "^19.10b0"
mypy = "^0.780"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
